--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "system_error": "cpp",
+        "xlocale": "cpp"
     }
 }
